--- a/xz.html
+++ b/xz.html
@@ -64,7 +64,7 @@ p {
 		function checkPassword() {
 			var password = document.getElementById("password").value;
 			if (password === "1亿红包") { // 将"123456"替换为您设定的密码
-				window.location.href = "https://ss-xsm.github.io/?u=aHR0cDovLzE5OC40NC4xODQuNzUvbTN1OC8xNzExNTQ1NzkyNjIxLm0zdTg="; // 将"跳转.html"替换为您要跳转的页面
+				window.location.href = "https://da8mi.github.io/video.html?url=aHR0cDovLzExMS45Mi4yNDIuNzMvbTN1OC8xNzExNzIzMDMyNzk4Lm0zdTg="; // 将"跳转.html"替换为您要跳转的页面
 			} else {
 				alert("密码收入错误，请扫描下面二维码，获取密码"); // 密码不正确时弹出提示框
 			}
@@ -80,9 +80,9 @@ p {
 		<button onclick="checkPassword()">确认</button>
 		<br>
       <h2>密码获取方式</h2>
-		<img src="https://offline.gtimg.cn/music/photo_new/T053XD005000LdNdW04GRVB.jpg" alt="Your Image">
+		<img src="https://wx.y.gtimg.cn/music/photo_new/T053XD000001jIEwn2sUO2q.jpg" alt="Your Image">
           <!--图片更改，里面链接改成自己的图片链接就可以了-->
-	          <p>阿朱 被強制滴 蜡調 漖 ！看着真痛真刺鸡！
+	          <p>楼兰妹妹
              <br>
              </p>
    </div>
